[package]
name = "lankm-headless"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
clap = { version = "4.5.20", features = ["derive"] }
log = "0.4.22"
simple_logger = "5.0.0"

[target.'cfg(target_os="linux")'.dependencies]
evdev = "0.12.2"

[target.'cfg(windows)'.dependencies.windows]
version = "^0.58.0"
features = [
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging"
]
